fix: 兼容 JDK 17 字典测试